Concluso header e parte iniziale main

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
@@ -30,12 +31,129 @@
                 </ul>
             </div>
         </nav>
-        <div class="hero">
+        <div class="hero-bg">
+            <div class="container-large">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <div class="row">
+                    <div class="col_4_9">
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
+                            posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente
+                            e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                        <a href="#" class="button-blue">Inizia la tua prova gratuita</a>
+                        <p>Annulla in qualsisasi momento</p>
+                        <h2><i class="fas fa-arrow-down"></i></h2>
+                    </div>
+                    <img class="col_5_9" src="img/jumbo.png" alt="img-1">
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <!-- CONTAINER PER TUTTO IL MAIN -->
+        <div class="container">
+            <div class="offer">
+                <h2>Trova il piano Dropbox Business che fa per te</h2>
+                <form>
+                    <input type="radio" name="fatt."><label>Fatturazione mensile</label>
+                    <input type="radio" name="fatt."><label>Fatturazione annuale</label>
+                </form>
+            </div>
+            <!-- 3 COLONNE OFFERTE -->
+            <div class="row">
+                <!-- 1^ COLONNA -->
+                <div class="col_3_9">
+                    <div class="border">
+                        <p class="col-title"><i class="far fa-user"></i> Singolo</p>
+                        <div class="col-text">
+                            <h3>Professional</h3>
+                            <h4>19,99 €</h4>
+                            <p class="grey">/mese</p>
+                            <ul>
+                                <li><i class="far fa-user"></i> 1 utente</li>
+                                <li><i class="far fa-folder"></i> 3TB di spazio di archiviazione sicuro</li>
+                                <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione
+                                    semplice e sicura</li>
+                            </ul>
+                            <a class="button-blue" href="#">Prova gratis per 30 giorni</a>
+                            <p>oppure <a href="#">acquista ora</a></p>
+                            <hr>
+                            <h5>Punti salienti del piano</h5>
+                            <ul>
+                                <li><i class="fas fa-check"></i> Invia file fine a 100 GB con Dropbox Transfert</li>
+                                <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- 2^ COLONNA -->
+                 <div class="col_3_9">
+                    <div class="border">
+                        <p class="col-title"><i class="far fa-building"></i> Team</p>
+                        <div class="col-text">
+                            <h3>Standard</h3>
+                            <h4>19,99 €</h4>
+                            <p class="grey">/utente/mese, a partire da 3 utenti</p>
+                            <ul>
+                                <li><i class="fas fa-user-plus"></i> 1 utente</li>
+                                <li><i class="far fa-folder"></i> 3TB di spazio di archiviazione sicuro</li>
+                                <li><i class="far fa-smile"></i> Funzioni di produttività premium e condivisione
+                                    semplice e sicura</li>
+                            </ul>
+                            <a class="button-blue" href="#">Prova gratis per 30 giorni</a>
+                            <p>oppure <a href="#">acquista ora</a></p>
+                            <hr>
+                            <h5>Punti salienti del piano</h5>
+                            <ul>
+                                <li><i class="fas fa-check"></i> Invia file fine a 100 GB con Dropbox Transfert</li>
+                                <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- 3^ COLONNA -->
+                <div class="col_3_9">
+                    <div class="border">
+                        <p class="col-title"><i class="far fa-building"></i> Team</p>
+                        <div class="col-text">
+                            <h3>Professional</h3>
+                            <h4>19,99 €</h4>
+                            <p class="grey">/mese</p>
+                            <ul>
+                                <li><i class="fas fa-user-plus"></i> 1 utente</li>
+                                <li><i class="far fa-smile"></i> 3TB di spazio di archiviazione sicuro</li>
+                                <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione
+                                    semplice e sicura</li>
+                            </ul>
+                            <a class="button-blue" href="#">Prova gratis per 30 giorni</a>
+                            <p>oppure <a href="#">acquista ora</a></p>
+                            <hr>
+                            <h5>Punti salienti del piano</h5>
+                            <ul>
+                                <li><i class="fas fa-check"></i> Invia file fine a 100 GB con Dropbox Transfert</li>
+                                <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- **************************************************************** -->
+
 
         </div>
-        
-    </header>
-    <main></main>
+
+    </main>
     <footer></footer>
 </body>
 
