Finita sezione sotto le 2 colonne

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="row">
                 <!-- 1^ COLONNA -->
                 <div class="col_3_9">
-                    <div class="border">
+                    <div class="border-height">
                         <p class="col-title"><i class="far fa-user"></i> Singolo</p>
                         <div class="col-text">
                             <h3>Professional</h3>
@@ -91,7 +91,7 @@
                 </div>
                 <!-- 2^ COLONNA -->
                  <div class="col_3_9">
-                    <div class="border">
+                    <div class="border-height">
                         <p class="col-title"><i class="far fa-building"></i> Team</p>
                         <div class="col-text">
                             <h3>Standard</h3>
@@ -120,7 +120,7 @@
                 </div>
                 <!-- 3^ COLONNA -->
                 <div class="col_3_9">
-                    <div class="border">
+                    <div class="border-height">
                         <p class="col-title"><i class="far fa-building"></i> Team</p>
                         <div class="col-text">
                             <h3>Professional</h3>
@@ -148,7 +148,20 @@
                     </div>
                 </div>
             </div>
-            <!-- **************************************************************** -->
+            <!-- *******************FINE 3 COLONNE************************** -->
+            <div class="border-margin">
+                <p class="col-title"><i class="far fa-building"></i> Team</p>
+                <div class="row">
+                    <div class="col_6_9">
+                        <h3>Enterprise</h3>
+                        <h4>Contatta l'ufficio vendite per i prezzi</h4>
+                        <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                    </div>
+                    <div class="col_3_9">
+                        <a href="#" class="button-blue">Contatta l'ufficio vendite</a>
+                    </div>
+                </div>
+            </div>
 
 
         </div>
