Finito div partners

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
                 </div>
             </div>
             <!-- *******************FINE 3 COLONNE************************** -->
+
+            <!-- *******************ENTERPRISE************************** -->
             <div class="border-margin">
                 <p class="col-title"><i class="far fa-building"></i> Team</p>
                 <div class="row">
@@ -162,7 +164,19 @@
                     </div>
                 </div>
             </div>
-
+            <!-- *******************FOTO PARTNERS************************** -->
+            <div class="partners">
+                <div class="row">
+                    <div class="col_5_9">
+                        <img src="img/partner.png" alt="img-partners">
+                    </div>
+                    <div class="col_4_9">
+                        <h3>Entra in contatto con un partner Dropbox</h3>
+                        <p>Trova un partner Dropbox e HelloSing di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                        <a class="button-white" href="#">Trova un parner</a>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
