--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <div class="col_4_9">
                         <h3>Entra in contatto con un partner Dropbox</h3>
                         <p>Trova un partner Dropbox e HelloSing di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
-                        <a class="button-white" href="#">Trova un parner</a>
+                        <a class="button-white" href="#">Trova un partner</a>
                     </div>
                 </div>
             </div>
