Sistemato dimensioni colonne in linea col container grazie al margin negativo

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </form>
             </div>
             <!-- 3 COLONNE OFFERTE -->
-            <div class="row">
+            <div class="row neg-margin">
                 <!-- 1^ COLONNA -->
                 <div class="col_3_9">
                     <div class="border-height">
@@ -164,7 +164,7 @@
                     </div>
                 </div>
             </div>
-            <!-- *******************FOTO PARTNERS************************** -->
+            <!-- *******************PARTNERS************************** -->
             <div class="partners">
                 <div class="row">
                     <div class="col_5_9">
