Creata sezione 6 img (operations)

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <!-- 2^ COLONNA -->
-                 <div class="col_3_9">
+                <div class="col_3_9">
                     <div class="border-height">
                         <p class="col-title"><i class="far fa-building"></i> Team</p>
                         <div class="col-text">
@@ -150,14 +150,15 @@
             </div>
             <!-- *******************FINE 3 COLONNE************************** -->
 
-            <!-- *******************ENTERPRISE************************** -->
+            <!-- *******************ENTERPRISE/BORDER************************** -->
             <div class="border-margin">
                 <p class="col-title"><i class="far fa-building"></i> Team</p>
                 <div class="row">
                     <div class="col_6_9">
                         <h3>Enterprise</h3>
                         <h4>Contatta l'ufficio vendite per i prezzi</h4>
-                        <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                        <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione
+                            su qualsiasi scala.</p>
                     </div>
                     <div class="col_3_9">
                         <a href="#" class="button-blue">Contatta l'ufficio vendite</a>
@@ -172,11 +173,68 @@
                     </div>
                     <div class="col_4_9">
                         <h3>Entra in contatto con un partner Dropbox</h3>
-                        <p>Trova un partner Dropbox e HelloSing di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                        <p>Trova un partner Dropbox e HelloSing di fiducia. Ottieni le soluzioni e i servizi necessari
+                            per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione
+                            e supporto continui.</p>
                         <a class="button-white" href="#">Trova un partner</a>
                     </div>
                 </div>
             </div>
+            <!-- *******************OPERATIONS************************** -->
+            <div class="operations">
+                <h2>Esegui più operazioni con Dropbox Business</h2>
+                <div class="row neg-margin">
+                    <!-- ********img-1********* -->
+                    <div class="col_3_9">
+                        <img src="img/business-feature-switching-tools.png" alt="switching-tools">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span
+                                class="lol">Dropbox Paper</span> direttamente da Dropbox.</p>
+                    </div>
+                    <!-- ********img-2********* -->
+                    <div class="col_3_9">
+                        <img src="img/business-feature-coordinate-it.png" alt="coordinate">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span
+                                class="lol">Dropbox Paper</span> direttamente da Dropbox.</p>
+                    </div>
+                    <!-- ********img-3********* -->
+                    <div class="col_3_9">
+                        <img src="img/business-feature-multi-device.png" alt="multi-device">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span
+                                class="lol">Dropbox Paper</span> direttamente da Dropbox.</p>
+                    </div>
+                    <!-- ********img-4********* -->
+                    <div class="col_3_9">
+                        <img src="img/business-feature-integrations-it.png" alt="integrations">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span
+                                class="lol">Dropbox Paper</span> direttamente da Dropbox.</p>
+                    </div>
+                    <!-- ********img-5********* -->
+                    <div class="col_3_9">
+                        <img src="img/business-feature-send-files-it.png" alt="send-files">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span
+                                class="lol">Dropbox Paper</span> direttamente da Dropbox.</p>
+                    </div>
+                    <!-- ********img-6********* -->
+                    <div class="col_3_9">
+                        <img src="img/business-feature-security.png" alt="security">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span
+                                class="lol">Dropbox Paper</span> direttamente da Dropbox.</p>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
 
