Arrivato alla sezione "domande frequenti"

--- a/index.html
+++ b/index.html
@@ -190,54 +190,115 @@
                         <h3>Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
                             contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span
-                                class="lol">Dropbox Paper</span> direttamente da Dropbox.</p>
+                                class="i-saw-you">Dropbox Paper</span> direttamente da Dropbox.</p>
                     </div>
                     <!-- ********img-2********* -->
                     <div class="col_3_9">
                         <img src="img/business-feature-coordinate-it.png" alt="coordinate">
                         <h3>Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
-                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span
-                                class="lol">Dropbox Paper</span> direttamente da Dropbox.</p>
+                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                            Dropbox Paper direttamente da Dropbox.</p>
                     </div>
                     <!-- ********img-3********* -->
                     <div class="col_3_9">
                         <img src="img/business-feature-multi-device.png" alt="multi-device">
                         <h3>Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
-                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span
-                                class="lol">Dropbox Paper</span> direttamente da Dropbox.</p>
+                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                            Dropbox Paper direttamente da Dropbox.</p>
                     </div>
                     <!-- ********img-4********* -->
                     <div class="col_3_9">
                         <img src="img/business-feature-integrations-it.png" alt="integrations">
                         <h3>Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
-                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span
-                                class="lol">Dropbox Paper</span> direttamente da Dropbox.</p>
+                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                            Dropbox Paper direttamente da Dropbox.</p>
                     </div>
                     <!-- ********img-5********* -->
                     <div class="col_3_9">
                         <img src="img/business-feature-send-files-it.png" alt="send-files">
                         <h3>Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
-                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span
-                                class="lol">Dropbox Paper</span> direttamente da Dropbox.</p>
+                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                            Dropbox Paper direttamente da Dropbox.</p>
                     </div>
                     <!-- ********img-6********* -->
                     <div class="col_3_9">
                         <img src="img/business-feature-security.png" alt="security">
                         <h3>Passa di meno da uno strumento all'altro</h3>
                         <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
-                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e <span
-                                class="lol">Dropbox Paper</span> direttamente da Dropbox.</p>
+                            contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                            Dropbox Paper direttamente da Dropbox.</p>
                     </div>
+                </div>
+            </div>
+            <!-- *******************OPERATIONS************************** -->
+            <div class="box-title">
+                <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                <a href="#">Scopri di più sui nostri clienti</a>
+            </div>
+        </div>
+        <!-- ****************BOX***************** -->
+        <div class="box-container clearfix">
+            <!-- *****LATO SINISTRO**** -->
+            <div class="box-container-aside clearfix">
+                <div class="single-box bg-green">
+                    <img src="img/designit.svg" alt="designit">
+                </div>
+                <div class="single-box bg-purple">
+                    <img src="img/arizona_state_university.svg" alt="arizona">
+                </div>
+                <div class="single-box bg-blue">
+                    <img src="img/university_of_florida.svg" alt="florida">
+                </div>
+                <div class="single-box bg-red">
+                    <img src="img/topps.svg" alt="topps">
+                </div>
+            </div>
+            <!-- *****CENTRO**** -->
+            <div class="box-container-center">
+                <img src="img/designit.svg" alt="designit">
+                <hr>
+                <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte
+                    soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper.
+                    Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".
+                </p>
+                <p class="author">Morten Thomsen, Global IT Lead</p>
+            </div>
+            <!-- *****LATO DESTRO**** -->
+            <div class="box-container-aside clearfix">
+                <div class="single-box bg-wine">
+                    <img src="img/world_bicycle_relief.svg" alt="bicycle">
+                </div>
+                <div class="single-box bg-sky">
+                    <img src="img/hearst_corp.svg" alt="hearst">
+                </div>
+                <div class="single-box bg-sea">
+                    <img src="img/lonely_planet.svg" alt="lonely">
+                </div>
+                <div class="single-box bg-yellow">
+                    <img src="img/clear_channel.svg" alt="clear">
                 </div>
             </div>
 
 
-        </div>
 
+        </div>
+        <!-- **********"HERO"********** -->
+        <div class="bg-sky">
+            <div class="container">
+                <div class="row">
+                    <div class="col_5_9">
+                        <h2>Porta Dropbox Business nella tua azienda.</h2>
+                    </div>
+                    <div class="col_4_9">
+                        <a class="button-white" href="#">Inizia la tua prova gratuita</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
