Creata sezione "domande frequenti"

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
     </header>
 
     <main>
-        <!-- CONTAINER PER TUTTO IL MAIN -->
         <div class="container">
             <div class="offer">
                 <h2>Trova il piano Dropbox Business che fa per te</h2>
@@ -59,7 +58,6 @@
                     <input type="radio" name="fatt."><label>Fatturazione annuale</label>
                 </form>
             </div>
-            <!-- 3 COLONNE OFFERTE -->
             <div class="row neg-margin">
                 <!-- 1^ COLONNA -->
                 <div class="col_3_9">
@@ -148,9 +146,7 @@
                     </div>
                 </div>
             </div>
-            <!-- *******************FINE 3 COLONNE************************** -->
 
-            <!-- *******************ENTERPRISE/BORDER************************** -->
             <div class="border-margin">
                 <p class="col-title"><i class="far fa-building"></i> Team</p>
                 <div class="row">
@@ -165,7 +161,6 @@
                     </div>
                 </div>
             </div>
-            <!-- *******************PARTNERS************************** -->
             <div class="partners">
                 <div class="row">
                     <div class="col_5_9">
@@ -180,7 +175,6 @@
                     </div>
                 </div>
             </div>
-            <!-- *******************OPERATIONS************************** -->
             <div class="operations">
                 <h2>Esegui più operazioni con Dropbox Business</h2>
                 <div class="row neg-margin">
@@ -234,13 +228,11 @@
                     </div>
                 </div>
             </div>
-            <!-- *******************OPERATIONS************************** -->
             <div class="box-title">
                 <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
                 <a href="#">Scopri di più sui nostri clienti</a>
             </div>
         </div>
-        <!-- ****************BOX***************** -->
         <div class="box-container clearfix">
             <!-- *****LATO SINISTRO**** -->
             <div class="box-container-aside clearfix">
@@ -286,7 +278,6 @@
 
 
         </div>
-        <!-- **********"HERO"********** -->
         <div class="bg-sky">
             <div class="container">
                 <div class="row">
@@ -296,6 +287,44 @@
                     <div class="col_4_9">
                         <a class="button-white" href="#">Inizia la tua prova gratuita</a>
                     </div>
+                </div>
+            </div>
+        </div>
+        <!-- FREQUENTI -->
+        <div class="freq">
+            <div class="container">
+                <h3>Domande frequenti</h3>
+                <div class="row">
+                    <div class="col_6_9">
+                        <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                    </div>
+                    <div class="col_3_9">
+                        <i class="fas fa-chevron-down"></i>
+                    </div>                   
+                </div>
+                <div class="row">
+                    <div class="col_6_9">
+                        <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                    </div>
+                    <div class="col_3_9">
+                        <i class="fas fa-chevron-down"></i>
+                    </div>                   
+                </div>
+                <div class="row">
+                    <div class="col_6_9">
+                        <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                    </div>
+                    <div class="col_3_9">
+                        <i class="fas fa-chevron-down"></i>
+                    </div>                   
+                </div>
+                <div class="row">
+                    <div class="col_6_9">
+                        <h5>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5>
+                    </div>
+                    <div class="col_3_9">
+                        <i class="fas fa-chevron-down"></i>
+                    </div>                   
                 </div>
             </div>
         </div>
